--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "start": "npx tailwindcss -i ./src/style.css -o ./dist/style.css --watch",
-    "build": "npx tailwindcss -i ./src/style.css -o ./dist/style.css && cp -r src/imgs dist && cp -f src/index.html dist/index.html && sed -i '.bak' 's/\\/dist\\/style.css/style.css/g' dist/index.html && rm -f ./dist/*.bak",
+    "build": "npx tailwindcss -i ./src/style.css -o ./dist/style.css && cp -r src/imgs dist && cp -f src/*.html dist/ && sed -i '.bak' 's/\\/dist\\/style.css/style.css/g' dist/index.html && rm -f ./dist/*.bak",
     "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
