라이센스 관련 추가

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "author": "dev@bizcowork.co.kr",
   "license": "UNLICENSED",
+  "private": true,
   "bugs": {
     "url": "https://github.com/bizcowork/cashdab-landing/issues"
   },
